--- a/01-Load-Data-ACogSearch.ipynb
+++ b/01-Load-Data-ACogSearch.ipynb
@@ -1,49 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load and Enrich multiple file types Azure Cognitive Search\n",
-    "\n",
-    "In this Jupyter Notebook, we create and run enrichment steps to unlock searchable content in the specified Azure blob. It performs operations over mixed content in Azure Storage, such as images and application files, using a skillset that analyzes and extracts text information that becomes searchable in Azure Cognitive Search. \n",
-    "The reference sample can be found at [Tutorial: Use Python and AI to generate searchable content from Azure blobs](https://docs.microsoft.com/azure/search/cognitive-search-tutorial-blob-python).\n",
-    "\n",
-    "In this demo we are going to be using a public Blob Storage container that has ~9.8k Computer Science publication PDFs from the Arxiv dataset.\n",
-    "https://www.kaggle.com/datasets/Cornell-University/arxiv\n",
-    "\n",
-    "If you want to explore the dataset, go [HERE](https://console.cloud.google.com/storage/browser/arxiv-dataset/arxiv/cs/pdf?pageState=(%22StorageObjectListTable%22:(%22f%22:%22%255B%255D%22))&prefix=&forceOnObjectsSortingFiltering=false)\n",
-    "\n",
-    "Although only  PDF files are used here, this can be done at a much larger scale and Azure Cognitive Search supports a range of other file formats including: Microsoft Office (DOCX/DOC, XSLX/XLS, PPTX/PPT, MSG), HTML, XML, ZIP, and plain text files (including JSON).\n",
-    "\n",
-    "This notebook creates the following objects on your search service:\n",
-    "\n",
-    "+ search index\n",
-    "+ data source\n",
-    "+ skillset\n",
-    "+ indexer\n",
-    "\n",
-    "This notebook calls the [Search REST APIs](https://docs.microsoft.com/rest/api/searchservice/), but you can also use the Azure.Search.Documents client library in the Azure SDK for Python to perform the same steps. See this [Python quickstart](https://docs.microsoft.com/azure/search/search-get-started-python) for details.\n",
-    "\n",
-    "To run this notebook, you should have already created the Azure services on README and edit app/credentials.py with your own values. Once you've done this, you can run all cells, but the query won't return results until the indexer is finished and the search index is loaded. \n",
-    "\n",
-    "We recommend running each step and making sure it completes before moving on.\n",
-    "\n",
-    "Reference:\n",
-    "\n",
-    "https://learn.microsoft.com/en-us/azure/search/cognitive-search-tutorial-blob\n",
-    "\n",
-    "https://github.com/Azure-Samples/azure-search-python-samples/blob/main/Tutorial-AI-Enrichment/PythonTutorial-AzureSearch-AIEnrichment.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![cog-search](./images/Cog-Search-Enrich.png)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -70,11 +27,11 @@
    "outputs": [],
    "source": [
     "# Define the names for the data source, skillset, index and indexer\n",
-    "blob_container_name = \"arxivcs\"\n",
-    "datasource_name = \"cogsrch-datasource-files\"\n",
-    "skillset_name = \"cogsrch-skillset-files\"\n",
-    "index_name = \"cogsrch-index-files\"\n",
-    "indexer_name = \"cogsrch-indexer-files\""
+    "blob_container_name = \"snowflake-data\"\n",
+    "datasource_name = \"cogsrch-snowflake-datasource-files\"\n",
+    "skillset_name = \"cogsrch-snowflake-skillset-files\"\n",
+    "index_name = \"cogsrch-snowflake-index-files\"\n",
+    "indexer_name = \"cogsrch-snowflake-indexer-files\""
    ]
   },
   {
@@ -529,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -539,8 +496,8 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "Status: inProgress\n",
-      "Items Processed: 460\n",
+      "Status: success\n",
+      "Items Processed: 3\n",
       "True\n"
      ]
     }
@@ -605,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.1"
   },
   "vscode": {
    "interpreter": {
