--- a/03-Quering-AOpenAI.ipynb
+++ b/03-Quering-AOpenAI.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a5cc7ae5-6fe9-4fd8-992d-0507297387ea",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "OpenAIEmbeddings(client=<class 'openai.api_resources.embedding.Embedding'>, document_model_name='text-embedding-ada-002', query_model_name='text-embedding-ada-002', openai_api_key=None)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3315033a-4a08-4db5-8f5c-fa0a99892dc4",
    "metadata": {},
    "outputs": [
@@ -465,8 +465,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 139 ms, sys: 28.1 ms, total: 167 ms\n",
-      "Wall time: 3.48 s\n"
+      "CPU times: user 114 ms, sys: 11.1 ms, total: 125 ms\n",
+      "Wall time: 2.76 s\n"
      ]
     }
    ],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "57429335-34d3-458a-b7c9-52482a0936d5",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "634f5bd8-0d56-47b8-84fd-fe9b678bfc32",
    "metadata": {},
    "outputs": [],
@@ -523,23 +523,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "a1e619b8-1dcf-431b-8aad-f1696a09c2ac",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76d2cd4d13e942efb999ed812686d69c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)olve/main/vocab.json', max=1042301.0, styl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6d1885e10344f72a82a2fd4938a9be8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)olve/main/merges.txt', max=456318.0, style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d730be27355947b5ad06017e7fae9676",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)/main/tokenizer.json', max=1355256.0, styl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "094699e59229406bb698569f6bfb16e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)lve/main/config.json', max=665.0, style=Pr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (2082 > 1024). Running this sequence through the model will result in indexing errors\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (2136 > 1024). Running this sequence through the model will result in indexing errors\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 839 ms, sys: 100 ms, total: 939 ms\n",
-      "Wall time: 18.7 s\n"
+      "\n",
+      "CPU times: user 945 ms, sys: 123 ms, total: 1.07 s\n",
+      "Wall time: 20.4 s\n"
      ]
     }
    ],
@@ -550,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8cddb1cb-a4a0-4e2f-9f0c-4216b0f232b2",
    "metadata": {},
    "outputs": [
@@ -570,9 +648,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Snowflake is an enterprise-ready data warehouse as a service that is cloud-based, highly scalable, elastic, and supports columnar storage and processing of semi-structured data. It offers automatic type inference and columnar storage for schema-less data, encrypted data import and export, encryption of table data, role-based access control, and two-factor authentication. \n",
-      "Sources:\n",
-      "[' https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake%20Internals.pdf and https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake_basic%20overview.pdf']\n"
+      "Snowflake is an enterprise-ready data warehouse as a service that is built for the cloud, features a multi-cluster, shared-data architecture, automatic columnarization of semi-structured data, schema-less performance, time travel and cloning, and security features such as encrypted data import/export, hierarchical key management, and role-based access control. It serves tens of millions of queries per day over hundreds petabytes of data and has over 1000 active customers. It was founded in August 2012 and is headquartered in San Mateo, CA with an engineering office in Seattle. Snowflake has reinvented the data warehouse for the cloud and today's data, delivering the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions. It is currently offered as a SaaS model that dramatically helped the speed of development and creates a continuous stream of hard engineering challenges. Snowflake's elasticity matters more in practice than core performance. It has future plans to offer advisors, materialized views, stored procedures, data lake support, streaming, time series, multi-cloud, global Snowflake, and replication. \n",
+      "SOURCES: https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake%20Internals.pdf, https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake_basic%20overview.pdf\n",
+      "Sources:\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-d85c170824fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Source:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sources:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Source:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -588,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "11345374-6420-4b36-b061-795d2a804c85",
    "metadata": {},
    "outputs": [
@@ -596,12 +685,12 @@
      "data": {
       "text/plain": [
        "['\\n\\n•Snowflake is an enterprise-ready data warehouse as a service\\n•Novel multi-cluster, shared-data architecture\\n•Highly elastic and available\\n•Semi-structured and schema-less data at the speed of relational data\\n•Pure SaaS experience',\n",
-       " '•The Snowflake Elastic Data Warehouse, or “Snowflake”\\n•Multi-tenant, transactional, secure, highly scalable, elastic\\n•Implemented from scratch (no Hadoop, Postgres etc.)\\n•Currently runs on AWS and Azure \\n•Serves tens of millions of queries per day over hundreds petabytes of data\\n•1000+ active customers, growing fast',\n",
-       " 'Snowflake is a cloud-based enterprise data warehousing service that supports self-describing, compact binary serialization designed for fast key-value lookup, comparison, and hashing. It offers columnar storage and processing of semi-structured data, automatic type inference and columnar storage for schema-less data (VARIANT), encrypted data import and export, encryption of table data using NIST 800-57 compliant hierarchical key management and key lifecycle, role-based access control (RBAC) within SQL, and two-factor authentication and federated authentication. Snowflake is an ELT platform that offers the speed and expressiveness of an RDBMS, and it supports time travel and cloning, data sharing, serverless ingestion of data, and reclustering of data. It also offers a spark connector with pushdown and support for Azure Cloud and many other connectors. The company is based in San Mateo and Seattle and was founded in August 2012.',\n",
-       " 'Snowflake is a cloud data warehousing company that has reinvented the data warehouse for the cloud and today’s data. It is built from the cloud up with a patent-pending new architecture that delivers the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions.']"
+       " '\\n\\n•The Snowflake Elastic Data Warehouse, or “Snowflake”\\n•Built for the cloud\\n•Multi-tenant, transactional, secure, highly scalable, elastic\\n•Implemented from scratch (no Hadoop, Postgres etc.)\\n\\n•Currently runs on AWS and Azure \\n•Serves tens of millions of queries per day over hundreds \\npetabytes of data\\n•1000+ active customers, growing fast',\n",
+       " \"Snowflake is an enterprise data warehouse that is offered as a cloud service. It features a multi-cluster, shared-data architecture, automatic columnarization of semi-structured data, schema-less performance, time travel and cloning, and security features such as encrypted data import/export, hierarchical key management, and role-based access control. Additionally, Snowflake offers support for data sharing, reclustering of data, Spark connector with pushdown, and much more. It was founded in August 2012 and is headquartered in San Mateo, CA with an engineering office in Seattle. Snowflake is designed for fast key-value lookup, comparison, and hashing, and is supported by all SQL operators. It is a SaaS model that dramatically helped the speed of development and creates a continuous stream of hard engineering challenges. Snowflake's elasticity matters more in practice than core performance. Currently, Snowflake has many ongoing challenges, including SaaS and multi-tenancy, handling failures, and automating operations, and has future plans to offer advisors, materialized views, stored procedures, data lake support, streaming, time series, multi-cloud, global Snowflake, and replication.\",\n",
+       " \"Snowflake is a cloud data warehousing company that has reinvented the data warehouse for the cloud and today's data. It is built with a patent-pending new architecture that delivers the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions.\"]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,6 +711,14 @@
     "- Azure OpenAI takes these results and understand the content and uses it as context to give the best answer\n",
     "- Best of two worlds!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d22f6d6-642d-497a-a079-721127e277c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
