--- a/03-Quering-AOpenAI.ipynb
+++ b/03-Quering-AOpenAI.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "8cddb1cb-a4a0-4e2f-9f0c-4216b0f232b2",
    "metadata": {},
    "outputs": [
@@ -649,19 +649,9 @@
      "output_type": "stream",
      "text": [
       "Snowflake is an enterprise-ready data warehouse as a service that is built for the cloud, features a multi-cluster, shared-data architecture, automatic columnarization of semi-structured data, schema-less performance, time travel and cloning, and security features such as encrypted data import/export, hierarchical key management, and role-based access control. It serves tens of millions of queries per day over hundreds petabytes of data and has over 1000 active customers. It was founded in August 2012 and is headquartered in San Mateo, CA with an engineering office in Seattle. Snowflake has reinvented the data warehouse for the cloud and today's data, delivering the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions. It is currently offered as a SaaS model that dramatically helped the speed of development and creates a continuous stream of hard engineering challenges. Snowflake's elasticity matters more in practice than core performance. It has future plans to offer advisors, materialized views, stored procedures, data lake support, streaming, time series, multi-cloud, global Snowflake, and replication. \n",
-      "SOURCES: https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake%20Internals.pdf, https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake_basic%20overview.pdf\n",
-      "Sources:\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-d85c170824fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Source:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sources:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Source:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\n",
+      "Sources:\n",
+      "[' https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake%20Internals.pdf', ' https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake_basic%20overview.pdf']\n"
      ]
     }
    ],
@@ -670,9 +660,9 @@
     "\n",
     "display(HTML('<h4>Azure OpenAI ChatGPT Answer:</h4>'))\n",
     "\n",
-    "print(answer.split(\"Source:\")[0])\n",
+    "print(answer.split(\"SOURCES:\")[0])\n",
     "print(\"Sources:\")\n",
-    "print(answer.split(\"Source:\")[1].replace(' ',' ').split(\",\"))"
+    "print(answer.split(\"SOURCES:\")[1].replace(' ',' ').split(\",\"))"
    ]
   },
   {
