Changes in main.py

--- a/03-Quering-AOpenAI.ipynb
+++ b/03-Quering-AOpenAI.ipynb
@@ -98,16 +98,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f6d925eb-7f9c-429e-a62a-4c37d7702caf",
-   "metadata": {},
-   "source": [
-    "### Search on both indexes individually and aggragate results\n",
-    "\n",
-    "Note: In order to standarize the indexes we are setting 4 mandatory fields to be present on each index: id, title, content, pages, language. These fields must be present in each index so that each document can be treated the same along the code."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "faf2e30f-e71f-4533-ab52-27d048b80a89",
@@ -117,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://azure-cog-search-cstevuxaqrxcm.search.windows.net/indexes/cogsrch-snowflake-index-files/docs?api-version=2021-04-30-Preview&search=What is Snowflake?&select=*&$top=10&queryLanguage=en-us&queryType=semantic&semanticConfiguration=my-semantic-config&$count=true&speller=lexicon&answers=extractive|count-3&captions=extractive|highlight-false\n",
+      "https://azure-cog-search-g2ysbgn5zpihq.search.windows.net/indexes/cogsrch-snowflake-index-files/docs?api-version=2021-04-30-Preview&search=What is Snowflake?&select=*&$top=10&queryLanguage=en-us&queryType=semantic&semanticConfiguration=my-semantic-config&$count=true&speller=lexicon&answers=extractive|count-3&captions=extractive|highlight-false\n",
       "200\n",
       "Results Found: 3, Results Returned: 3\n"
      ]
@@ -145,6 +135,7 @@
     "    print(resp.status_code)\n",
     "\n",
     "    search_results = resp.json()\n",
+    "    #print(search_results)\n",
     "    agg_search_results.append(search_results)\n",
     "    print(\"Results Found: {}, Results Returned: {}\".format(search_results['@odata.count'], len(search_results['value'])))"
    ]
@@ -321,7 +312,7 @@
    ],
    "source": [
     "display(HTML('<h4>Top Answers</h4>'))\n",
-    "\n",
+    "#print(agg_search_results[0])\n",
     "for search_results in agg_search_results:\n",
     "    for result in search_results['@search.answers']:\n",
     "        if result['score'] > 0.5: # Show answers that are at least 50% of the max possible score=1\n",
@@ -346,22 +337,6 @@
     "                                    \"score\": result['@search.rerankerScore'],\n",
     "                                    \"location\": result['metadata_storage_path']                  \n",
     "                                }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8df3e6d4-9a09-4b0f-b328-238738ccfaec",
-   "metadata": {},
-   "source": [
-    "# Using Azure OpenAI\n",
-    "\n",
-    "Of course we want OpenAI to give a better answer, so we instead of sending these results, we send the content of the documents of the search result articles to OpenAI and lets GPT model give the answer.\n",
-    "\n",
-    "The problem is that the content of the search result files is or can be very lengthy, more than the allowed tokens allowed by the GPT Azure OpenAI models. So what we need to do is to split in chunks, vectorize and do a vector semantic search. \n",
-    "\n",
-    "Notice that **the documents chunks are already done in Azure Search**. file_content dictionary (created in the cell above) contains the pages (chunks) of each document. So we dont really need to chunk them again, each doc page for sure will fit on the max tokens limit of the completions LLM and of the embedding LLM.\n",
-    "\n",
-    "We will use a genius library call LangChain that wraps a lot of boiler plate code."
    ]
   },
   {
@@ -401,21 +376,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c5403dee-a4c4-420c-9819-68151d973695",
-   "metadata": {},
-   "source": [
-    "Depending of the amount of chunks/pages returned from the search result, which is very related to the size of the documents returned\n",
-    "we pick the embedding model that give us fast results. <br>The logic is, if there is less than 50 chunks (of 5000 chars each) to vectorize then we use \n",
-    "OpenAI models which currently don't offer batch processing, but if there is more than 50 chunks we use a BERT based in-memory model that processes in batches and in parallel (it is recommended a VM of at least 4 cores).\n",
-    "\n",
-    "For more information on in-memory models that you can use, see [HERE](https://www.sbert.net/docs/pretrained_models.html)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a03f1f10-32b0-4c1e-8a0e-eee1b1d29ce7",
+   "id": "24226dd4-6980-49e8-89dd-5f9f6abbfead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "a5cc7ae5-6fe9-4fd8-992d-0507297387ea",
    "metadata": {},
    "outputs": [
@@ -446,7 +409,7 @@
        "OpenAIEmbeddings(client=<class 'openai.api_resources.embedding.Embedding'>, document_model_name='text-embedding-ada-002', query_model_name='text-embedding-ada-002', openai_api_key=None)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,16 +420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3315033a-4a08-4db5-8f5c-fa0a99892dc4",
+   "execution_count": 11,
+   "id": "31e85122-824a-42ea-bb32-ad981309dc9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 114 ms, sys: 11.1 ms, total: 125 ms\n",
-      "Wall time: 2.76 s\n"
+      "CPU times: user 129 ms, sys: 24.7 ms, total: 154 ms\n",
+      "Wall time: 1.61 s\n"
      ]
     }
    ],
@@ -480,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "57429335-34d3-458a-b7c9-52482a0936d5",
    "metadata": {},
    "outputs": [],
@@ -489,32 +452,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "17247488-7d14-4178-9add-31eb1afcbcbe",
-   "metadata": {},
-   "source": [
-    "At this point we already have the most similar chunks (in order of relevance given by the in-memory vector cosine similarity search) in docs_db"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "793c4788-715e-44dd-b2b8-3f1c3201e4e0",
-   "metadata": {},
-   "source": [
-    "### Now we use GPT-3.5(Turbo) using map-reduce chain in order to stay within the limits of the allow model's token count\n",
-    "\n",
-    "for more information on the different types of prompts for these chains please see here:\n",
-    "\n",
-    "https://github.com/hwchase17/langchain/tree/master/langchain/chains/question_answering"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "634f5bd8-0d56-47b8-84fd-fe9b678bfc32",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import openai\n",
     "# Make sure you have the deployment named \"gpt-35-turbo\" for the model \"gpt-35-turbo (0301)\". \n",
     "# Use \"gpt-4\" if you have it available.\n",
     "llm = AzureChatOpenAI(deployment_name=\"gpt-35-turbo\", temperature=0.9, max_tokens=500)\n",
@@ -523,101 +467,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "a1e619b8-1dcf-431b-8aad-f1696a09c2ac",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76d2cd4d13e942efb999ed812686d69c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)olve/main/vocab.json', max=1042301.0, styl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6d1885e10344f72a82a2fd4938a9be8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)olve/main/merges.txt', max=456318.0, style…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d730be27355947b5ad06017e7fae9676",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)/main/tokenizer.json', max=1355256.0, styl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "094699e59229406bb698569f6bfb16e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading (…)lve/main/config.json', max=665.0, style=Pr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (2136 > 1024). Running this sequence through the model will result in indexing errors\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (2106 > 1024). Running this sequence through the model will result in indexing errors\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "CPU times: user 945 ms, sys: 123 ms, total: 1.07 s\n",
-      "Wall time: 20.4 s\n"
+      "CPU times: user 674 ms, sys: 95.7 ms, total: 770 ms\n",
+      "Wall time: 23.3 s\n"
      ]
     }
    ],
@@ -628,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "8cddb1cb-a4a0-4e2f-9f0c-4216b0f232b2",
    "metadata": {},
    "outputs": [
@@ -648,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Snowflake is an enterprise-ready data warehouse as a service that is built for the cloud, features a multi-cluster, shared-data architecture, automatic columnarization of semi-structured data, schema-less performance, time travel and cloning, and security features such as encrypted data import/export, hierarchical key management, and role-based access control. It serves tens of millions of queries per day over hundreds petabytes of data and has over 1000 active customers. It was founded in August 2012 and is headquartered in San Mateo, CA with an engineering office in Seattle. Snowflake has reinvented the data warehouse for the cloud and today's data, delivering the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions. It is currently offered as a SaaS model that dramatically helped the speed of development and creates a continuous stream of hard engineering challenges. Snowflake's elasticity matters more in practice than core performance. It has future plans to offer advisors, materialized views, stored procedures, data lake support, streaming, time series, multi-cloud, global Snowflake, and replication. \n",
+      "Snowflake is an enterprise-ready data warehouse as a service that is built for the cloud, highly elastic, and available, providing semi-structured and schema-less data at the speed of relational data on AWS and Azure. It has a multi-cluster, shared-data architecture, and supports self-describing, compact binary serialization, with a huge metadata layer. Snowflake is a game changer for an organization with a low load time and high load frequency. It is built on a SaaS model and has a rapidly growing user base and data volume, of over 1000 active customers serving tens of millions of queries per day over hundreds petabytes of data. It is a patent-pending new architecture that delivers the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud, all at a fraction of the cost of traditional solutions. \n",
       "\n",
       "Sources:\n",
       "[' https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake%20Internals.pdf', ' https://depprocureformstorage.blob.core.windows.net/snowflake-data/Snowflake_basic%20overview.pdf']\n"
@@ -657,7 +523,7 @@
    ],
    "source": [
     "answer = response['output_text']\n",
-    "\n",
+    "#print(answer)\n",
     "display(HTML('<h4>Azure OpenAI ChatGPT Answer:</h4>'))\n",
     "\n",
     "print(answer.split(\"SOURCES:\")[0])\n",
@@ -667,20 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "11345374-6420-4b36-b061-795d2a804c85",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['\\n\\n•Snowflake is an enterprise-ready data warehouse as a service\\n•Novel multi-cluster, shared-data architecture\\n•Highly elastic and available\\n•Semi-structured and schema-less data at the speed of relational data\\n•Pure SaaS experience',\n",
-       " '\\n\\n•The Snowflake Elastic Data Warehouse, or “Snowflake”\\n•Built for the cloud\\n•Multi-tenant, transactional, secure, highly scalable, elastic\\n•Implemented from scratch (no Hadoop, Postgres etc.)\\n\\n•Currently runs on AWS and Azure \\n•Serves tens of millions of queries per day over hundreds \\npetabytes of data\\n•1000+ active customers, growing fast',\n",
-       " \"Snowflake is an enterprise data warehouse that is offered as a cloud service. It features a multi-cluster, shared-data architecture, automatic columnarization of semi-structured data, schema-less performance, time travel and cloning, and security features such as encrypted data import/export, hierarchical key management, and role-based access control. Additionally, Snowflake offers support for data sharing, reclustering of data, Spark connector with pushdown, and much more. It was founded in August 2012 and is headquartered in San Mateo, CA with an engineering office in Seattle. Snowflake is designed for fast key-value lookup, comparison, and hashing, and is supported by all SQL operators. It is a SaaS model that dramatically helped the speed of development and creates a continuous stream of hard engineering challenges. Snowflake's elasticity matters more in practice than core performance. Currently, Snowflake has many ongoing challenges, including SaaS and multi-tenancy, handling failures, and automating operations, and has future plans to offer advisors, materialized views, stored procedures, data lake support, streaming, time series, multi-cloud, global Snowflake, and replication.\",\n",
-       " \"Snowflake is a cloud data warehousing company that has reinvented the data warehouse for the cloud and today's data. It is built with a patent-pending new architecture that delivers the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud at a fraction of the cost of traditional solutions.\"]"
+       "['Snowflake is an enterprise-ready data warehouse as a service, with a novel multi-cluster, shared-data architecture. It is highly elastic and available, and provides semi-structured and schema-less data at the speed of relational data. Snowflake offers a pure SaaS experience and has a rapidly growing user base and data volume.',\n",
+       " '• The Snowflake Elastic Data Warehouse, or “Snowflake”\\n• Built for the cloud\\n• Multi-tenant, transactional, secure, highly scalable, elastic\\n• Implemented from scratch (no Hadoop, Postgres etc.)\\n• Currently runs on AWS and Azure \\n• Serves tens of millions of queries per day over hundreds \\npetabytes of data\\n• 1000+ active customers, growing fast',\n",
+       " 'Snowflake is an enterprise data warehouse as a cloud service that supports self-describing, compact binary serialization and is designed for fast key-value lookup, comparison, and hashing. It is supported by all SQL operators (joins, group by, sort...). Snowflake also introduces automatic type inference and columnar storage for schema-less data (VARIANT). It offers automatic columnarization of semi-structured data and ELT with speed and expressiveness of RDBMS. Snowflake also has features like time travel and cloning, security, data sharing, serverless ingestion of data, and support for Azure Cloud. It is a multi-cluster, shared-data architecture game changer for an organization with a low load time and high load frequency. Snowflake is built on a SaaS model and has a huge metadata layer. It has a lot of ongoing challenges like supporting tens of thousands of concurrent users, and lots of future work like advisors, data lake support, streaming, and replication.',\n",
+       " \"Snowflake is a cloud data warehousing company that has reinvented the data warehouse for the cloud and today's data. It has a patent-pending new architecture that delivers the power of data warehousing, the flexibility of big data platforms, and the elasticity of the cloud, all at a fraction of the cost of traditional solutions.\"]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
